# airflow_dev

./: .env.example  .gitignore  1.py  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  dockerfile  gen.py  generate_increment.py  main.py  prepare_data.py  pyproject.toml  requirements.txt
airflow/: airflow.cfg  simple_auth_manager_passwords.json.generated
airflow/dags/: flights_dw_etl.py
api/: Dockerfile  fastapi_post.py
config/: airflow.cfg
dags/: ETL_LAST.py  Project.py  alikhan_bekkaliyev_task.py  api_to_dw_star_schema.py  build_gold.py  build_staging.py  config.py  create_olist_dwh.sql  csv_to_dw_star_schema.py  currency_aggregator_etl.py  ecommerce_dwh_star_schema.py  ecommerce_raw_to_staging.py  etl_geo_dataset.py  etl_olist-ecommerce.py  etl_raw_to_dwh.py  final_project.py  full_pipeline.py  game_info_dag.py  gorest_to_dw_star_schema.py  ingest_all_raw.py  iskander_final_project_dag.py  kezekte_etl.py  movie_ratings_etl_dag.py  movies_api_to_dw.py  olist_dwh_etl.py  olist_dwh_pipeline.py  olist_to_dw_star_schema.py  olist_to_snowflake_dwh.py  project_api_to_dwh.py  raw_from_api_to_minio.py  steam_etl.py  streamlit_app.py  telegram_alerts.py  test.py  tg_bot.py
dags/files/: products.csv
data/: car_sales_star_schema_dwh  csv_file  sales_2010-12-01.csv  sales_2010-12-02.csv  sales_2010-12-03.csv  sales_2010-12-05.csv  sales_2010-12-06.csv  sales_2010-12-07.csv  sales_2010-12-08.csv
plugins/: __init__.py  typeddicts.py
scripts/: download_data.py
sql/: olist_reporting_queries.sql
steam_dataset_2025_csv/: MANIFEST.json
(+8 files in other folders)
