[project]
name = "airflow-dev"
version = "0.1.0"
description = ""
authors = [
    {name = "Dilnaz", email = "d_zeinolla@kbtu.kz"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "apache-airflow (>=3.1.3,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
