[project]
name = "airflow-etl-final"
version = "0.1.0"
description = "ETL Pipeline with Star Schema for Final Project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "apache-airflow>=2.9.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"