[tool.poetry]
name = "kaspilab"
version = "0.1.0"
description = ""
authors = ["balgabekj <b_zhaksylyk@kbtu.kz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pandas = "^2.3.3"
psycopg2-binary = "^2.9.11"
requests = "^2.32.5"
apache-airflow = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
